@@ -1174,7 +1174,7 @@ public class StreamsConfig extends AbstractConfig {
                     RACK_AWARE_ASSIGNMENT_STRATEGY_DOC)
             .define(RACK_AWARE_ASSIGNMENT_TAGS_CONFIG,
                     Type.LIST,
-                    Collections.emptyList(),
+                    List.of(),
                     atMostOfSize(MAX_RACK_AWARE_ASSIGNMENT_TAG_LIST_SIZE),
                     Importance.LOW,
                     RACK_AWARE_ASSIGNMENT_TAGS_DOC)
